--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 - Record page breaks if no match assigned
 - Record editor "breaks" if match already selected
 - Record editor match dropdown dropping too low
-- Fix opponents table
+- Re-check mobile optimization for non-player-pages
+- Get rid of max-h-screen for card components (in general)
 
 24s368ms: Remaining steps:
 24s368ms:  - Manually update competition start dates, background images, group configs, hitmaps slugs
