--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@
 - Record editor match dropdown dropping too low
 - Re-check mobile optimization for non-player-pages
 - Get rid of max-h-screen for card components (in general)
+- Check sorting on various tables
 
 24s368ms: Remaining steps:
 24s368ms:  - Manually update competition start dates, background images, group configs, hitmaps slugs
