--- a/content/changelog/3.4.md
+++ b/content/changelog/3.4.md
@@ -1,10 +1,44 @@
 ---
-date: 1746369875000
+date: 1747036800000
 version: 3.4
-versionTitle: The Achievement Update
+versionTitle: What An Achievement
 major: true
 ---
 
--   Some text lol
--   b
--   c
+### Achieving the Impossible
+
+A new way to track your progression across multiple tournaments is available now.
+The majority of these achievements are automatic, with multiple tiers, viewable from your profile.
+Some of them are manual, which need to be submitted and manually approved by the rrstats team.
+Of course, there is also global achievement progression as well as a leaderboard available.
+Big thanks to Phanium, Observer, ChrisX3, Scruffy and In4Fun for helping to come up and pick the individual achievements.
+Some achievements may not work properly yet, if that is the case, feel free to notify me on discord.
+
+### Improved Routing
+
+Did you want a quicker way to jump from a player's page to another, or perhaps a specific leaderboard? No?
+Well, you're getting it anyways!
+Click on the small bolt icon in the top left of your screen, or press Control+K on your keyboard to open a quick navigation menu, and start jumping from page to page!
+
+### Strengthening Links
+
+It is also possible now to link more specific things in the URL, for sharing with others!
+Most of these can be linked by double clicking the thing you want to link, they include:
+
+-   Individual records
+-   Achievements on the global achievement progression page
+-   Individual leaderboards
+-   Individual maps on the spins page
+    Click one of them, and your URL should change to a link that will lead to that exact thing you clicked on!
+
+### Full changelog
+
+-   Added 69 automatic and 10 manual achievements
+-   Added the ability to link more specific things on multiple pages
+-   Added quick navigation menu
+-   Added map or competition backgrounds to all front-facing pages
+-   Added changelog page
+-   Allowed "home" button to be pressed with middle mouse button
+-   Limited the width of the ban column on competitions pages
+-   Removed automatic tweeting features
+-   Added support different database systems
