--- a/content/changelog/3.5.2.md
+++ b/content/changelog/3.5.2.md
@@ -5,4 +5,4 @@ version: 3.5.2
 
 ### Full changelog
 
-- Fixed "Maps played" and "Maps won" leaderboards
+- Fixed "Reverse sweeps" and "Titles won" leaderboards
